--- a/src/Silverback.Integration.OpenTracing.csproj
+++ b/src/Silverback.Integration.OpenTracing.csproj
@@ -10,8 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="GitVersionTask" Version="5.2.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="OpenTracing" Version="0.12.1" />
     <PackageReference Include="Silverback.Integration" Version="2.0.1" />
