--- a/src/Silverback.Integration.OpenTracing.csproj
+++ b/src/Silverback.Integration.OpenTracing.csproj
@@ -6,7 +6,7 @@
     <Authors>Alef Carlos</Authors>
     <PackageTags>opentracing;silverback;distributed trace</PackageTags>
     <PackageProjectUrl>https://github.com/alefcarlos/Silverback.Integration.OpenTracing</PackageProjectUrl>
-    <Description>PropPropagates trace information through pub/sub patternage</Description>
+    <Description>Propagates trace information through pub/sub patternage</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +16,6 @@
     </PackageReference>
     <PackageReference Include="OpenTracing" Version="0.12.1" />
     <PackageReference Include="Silverback.Integration" Version="2.0.1" />
-    <PackageReference Include="Silverback.Integration.Kafka" Version="2.0.1" />
   </ItemGroup>
 
 
