--- a/examples/OpenTracing.Example/OpenTracing.Example.csproj
+++ b/examples/OpenTracing.Example/OpenTracing.Example.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="jaeger" Version="0.3.7" />
     <PackageReference Include="OpenTracing" Version="0.12.1" />
     <PackageReference Include="Silverback.Integration.InMemory" Version="2.0.1" />
+    <PackageReference Include="Silverback.Integration.Kafka" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
